# sliger

./: README.md  pyproject.toml
demo/: automater_frontend.py  config.toml  custom_functions.py  redirect.py  requirements.txt
sliger/: __init__.py
