[tool.poetry]
name = "sliger"
version = "0.1.0"
description = "Slide the power of Python (and Jinja2) into Google Slides"
authors = ["Giulio Piccolo <gipiccol@cisco.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
google = "^3.0.0"
google-api-python-client = "^2.87.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
google-auth = "2.19.0"
jinja2 = "^3.1.2"
toml = "^0.10.2"

[tool.poetry.scripts]
sliger = 'sliger.__init__:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
